--- a/index.css
+++ b/index.css
@@ -1,3 +1,57 @@
 #heading {
-    color: blue;
+  color: blue;
+}
+
+.header {
+  padding: 10px;
+  margin: 5px;
+  display: flex;
+  justify-content: space-between;
+  border: 2px solid rgb(243, 118, 118);
+}
+
+.logo {
+  width: 150px;
+}
+
+.nav-items {
+  padding: 0px 20px;
+}
+
+.nav-items > ul {
+  font-size: 24px;
+  display: flex;
+  padding: 0px 20px;
+  list-style-type: none;
+}
+
+.nav-items > ul > li {
+  padding: 10px;
+  margin: 10px;
+}
+.res-card {
+  padding: 10px;
+  width: 250px;
+  /* height: 400px; */
+  margin: 15px;
+  font-feature-settings: "aalt";
+}
+
+.res-card:hover {
+  border: 2px solid rgb(239, 152, 99);
+  cursor: pointer;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+}
+
+.search {
+  padding: 10px;
+}
+
+.res-logo {
+  width: 100%;
+}
+
+.res-con {
+  display: flex;
+  flex-wrap: wrap;
 }
