--- a/index.css
+++ b/index.css
@@ -2,6 +2,12 @@
   color: blue;
 }
 
+.shimmer-card {
+  width: 50px;
+  height: 50px;
+  color: black;
+}
+
 .header {
   padding: 10px;
   margin: 5px;
